src/assets/styles/doc-styles.scss
/* ... */
.main-content {
  @apply py-8 xl:pr-60 lg:pl-64;

  .blog & {
    @apply pr-0;
  }

  margin-top: 80px;
  min-width: 0;
  line-height: 1.5em;
  box-sizing: border-box;

  &:after {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: '';
    z-index: 99;
    @apply bg-gray-900 bg-opacity-80;
    opacity: 0;
    transition: opacity 200ms;
    pointer-events: none;
  }

  a {
    @apply text-blue-700 hover:text-blue-500 dark:text-blue-400 dark:hover:text-blue-300 focus:outline-none focus:underline focus:text-blue-500 dark:focus:text-blue-300;
    @include transition-color;
  }

  & > article {
    max-width: 80ch;
    margin: 0 auto;
    padding: 1.5rem;
    padding-top: 0;

    & > header {
      h1 {
        margin-top: 0;
      }

      .summary {
        margin-top: 0.5rem;
        margin-bottom: 1rem;
        filter: opacity(0.7);
      }
    }

    & > footer {
      text-align: right;
      font-style: italic;
    }
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-bold;

    & img {
      height: 1em;
    }
  }

  h1,
  h1 + .header-anchor {
    @apply text-4xl;
  }

  h1 {
    @apply mt-10 mb-6;
  }

  h2,
  h2 + .header-anchor {
    @apply text-2xl;  
  }

  h2 + .header-anchor {
    @apply pb-6;
  }

  h3,
  h3 + .header-anchor {
    @apply text-xl;
  }

  h4,
  h4 + .header-anchor {
    @apply text-lg;
  }

  h2, h3, h4 {
    @apply mt-8 mb-4;

    & + .header-anchor {
      @apply pb-4;
    }
  }

  h5,
  h5 + .header-anchor {
    @apply text-base;
  }

  h6,
  h6 + .header-anchor {
    @apply text-sm;
  }

  pre,
  code,
  kbd,
  samp {
    white-space: pre;
    &, * {
      @include transition-colors;
    }
  }

  pre {
    @apply p-4 my-4 text-sm;
    overflow: auto;
  }

  .api pre {
    @apply border-none bg-transparent;
  }

  .api p {
    @apply mb-0;
  }

  .api .type {
    border: 1px solid;
    @apply border border-gray-200 dark:border-gray-700 rounded-md;
  }

  article {
    p, ul, ol, table {
      @apply my-4;
    }
  }

  :not(pre) > code {
    @apply whitespace-pre-wrap break-words rounded-md text-gray-800 dark:text-gray-50 bg-gray-100 dark:bg-gray-700 border border-gray-200 dark:border-gray-600 px-1;
    @include transition-colors;
  }

  p > code,
  p a code,
  li > code,
  td code {
    @apply text-base sm:text-sm;
  }

  p a code {
    @apply text-blue-700 hover:text-blue-500 dark:text-blue-300 dark:hover:text-blue-200 transition-colors;
    text-decoration: underline;
  }

  figure code {
    font-size: 0.9rem;
  }

  b,
  strong {
    @apply font-semibold;
  }

  code mark {
    @apply font-semibold bg-yellow-200 bg-opacity-40 dark:bg-yellow-600 dark:bg-opacity-30 px-1 -mx-1 inline-block;
    @include transition-background-color;
    font-style: initial;
    color: inherit;
  }

  ul {
    @apply list-disc;
  }

  ol {
    @apply list-decimal;
  }

  ul,
  ol {
    @apply pl-8;
  }

  li p:last-child {
    margin: 0;
  }

  dd {
    margin: 0 0 0 2em;
  }

  img, video {
    max-width: 100%;
    border-radius: 6px;
  }

  .table-wrapper {
    overflow: auto;
  }

  table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
  }

  td {
    vertical-align: top;
  }

  td,
  th {
    @apply border border-gray-400 px-4 py-2;
  }

  @media print {
    a,
    a:visited {
      text-decoration: underline;
    }

    a[href]:after {
      content: " (" attr(href) ")";
    }

    abbr[title]:after {
      content: " (" attr(title) ")";
    }

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
      content: "";
    }

    pre,
    blockquote {
      border: 1px solid #999;
      padding-right: 1em;
      page-break-inside: avoid;
    }

    tr,
    img {
      page-break-inside: avoid;
    }

    @page :left {
      margin: 15mm 20mm 15mm 10mm;
    }

    @page :right {
      margin: 15mm 10mm 15mm 20mm;
    }

    p,
    h2,
    h3 {
      orphans: 3;
      widows: 3;
    }

    h2,
    h3 {
      page-break-after: avoid;
    }
  }

  aside {
    position: fixed;
    top: 80px;
    right: 8px;
    overflow: auto;
    max-height: calc(100vh - 80px);
    @apply w-56;

    @apply hidden xl:block;

    > h3 {
      @apply text-sm uppercase;
    }

    ol {
      @apply list-none pl-0;

      ol {
        @apply pl-4;
      }

      li {
        @apply py-1
      }

      a {
        @apply text-sm text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-200 break-words transition-all;

        &[aria-current] {
          @apply text-gray-900 font-medium dark:text-gray-200;
        }
      }
    }
  }
}

.entry-date {
  display: block;
  &::before {
    content: "📆\00a0";
  }
}

